jenkins-terraform/modules/security/main.tf
resource "aws_security_group" "ec2sg" {
  name        = "${terraform.workspace}-ec2sg"
  vpc_id      = var.vpc_id
  description = "allow the rule of ssh and jenkins"
  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Jenkins"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all outbound traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name        = "${terraform.workspace}-ec2sg",
    Environment = "${terraform.workspace}"
    App         = "Jenkins"
  }
}
